--- a/frontend/src/app/accounts/accounts.component.html
+++ b/frontend/src/app/accounts/accounts.component.html
@@ -3,7 +3,7 @@
     <mat-list-item class="account">{{account.name}}</mat-list-item>
   </mat-list>
 
-  <button mat-fab color="primary" class="add-account-button">
+  <button mat-fab color="primary" class="add-account-button" (click)="showCreateDialog()">
     <mat-icon>add</mat-icon>
   </button>
 </div>
