--- a/frontend/src/app/accounts/accounts.component.html
+++ b/frontend/src/app/accounts/accounts.component.html
@@ -1,6 +1,9 @@
 <div class="container" fxFlex="1 1 auto">
   <mat-list *ngFor="let account of (accounts | async)">
-    <mat-list-item class="account">{{account.name}}</mat-list-item>
+    <mat-list-item class="account">
+      <h2 matLine>{{account.name}}</h2>
+      <p matLine>Startsaldo: {{account.startingBalance}}</p>
+    </mat-list-item>
   </mat-list>
 
   <button mat-fab color="primary" class="add-account-button" (click)="showCreateDialog()">
