--- a/frontend/src/app/accounts/create-account-dialog/create-account-dialog.component.html
+++ b/frontend/src/app/accounts/create-account-dialog/create-account-dialog.component.html
@@ -1,7 +1,11 @@
 <h1 mat-dialog-title>Konto anlegen</h1>
 <div mat-dialog-content>
   <mat-form-field>
-    <input matInput [(ngModel)]="accountName">
+    <input matInput [(ngModel)]="accountName" placeholder="Name">
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput type="number" [(ngModel)]="startingBalance" placeholder="Startsaldo">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
