Add categories frontend tab

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,10 @@
     <mat-toolbar color="primary">
       <mat-toolbar-row>
         <h1>{{title}}</h1>
-        <a mat-button routerLink="/accounts">Accounts</a>
+      </mat-toolbar-row>
+      <mat-toolbar-row>
+        <a mat-button routerLink="/accounts">Konten</a>
+        <a mat-button routerLink="/categories">Kategorien</a>
       </mat-toolbar-row>
     </mat-toolbar>
   </div>
