--- a/frontend/src/app/categories/categories.component.scss
+++ b/frontend/src/app/categories/categories.component.scss
@@ -3,3 +3,14 @@
   bottom: 16px;
   right: 16px;
 }
+
+.example-tree-invisible {
+  display: none;
+}
+
+.example-tree ul,
+.example-tree li {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
