--- a/frontend/src/app/accounts/create-account-dialog/create-account-dialog.component.html
+++ b/frontend/src/app/accounts/create-account-dialog/create-account-dialog.component.html
@@ -12,7 +12,7 @@
       <input matInput type="number" [(ngModel)]="startingBalance" placeholder="Startsaldo">
     </mat-form-field>
   </div>
-  <div mat-dialog-actions>
+  <div mat-dialog-actions align="end">
     <button mat-button (click)="onNoClick()">Abbrechen</button>
     <button mat-button (click)="createAccount()" cdkFocusInitial>Anlegen</button>
   </div>
