--- a/frontend/src/app/categories/create-category-dialog/create-category-dialog.component.html
+++ b/frontend/src/app/categories/create-category-dialog/create-category-dialog.component.html
@@ -8,7 +8,7 @@
       <input matInput [(ngModel)]="categoryName" placeholder="Name">
     </mat-form-field>
   </div>
-  <div mat-dialog-actions>
+  <div mat-dialog-actions align="end">
     <button mat-button (click)="onNoClick()">Abbrechen</button>
     <button mat-button (click)="createAccount()" cdkFocusInitial>Anlegen</button>
   </div>
