--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -5,6 +5,8 @@
         <h1>{{title}}</h1>
       </mat-toolbar-row>
       <mat-toolbar-row>
+        <a mat-button routerLink="/">Übersicht</a>
+        <a mat-button routerLink="/bookings">Buchungen</a>
         <a mat-button routerLink="/accounts">Konten</a>
         <a mat-button routerLink="/categories">Kategorien</a>
       </mat-toolbar-row>
