--- a/frontend/src/app/bookings/bookings.component.html
+++ b/frontend/src/app/bookings/bookings.component.html
@@ -3,7 +3,7 @@
     <mat-list-item class="account">
       <h2 matLine>{{booking.title}}</h2>
       <p matLine>{{booking.amount}}</p>
-      <p matLine>{{booking.date}}</p>
+      <p matLine>{{booking.date | date}}</p>
     </mat-list-item>
   </mat-list>
 
