--- a/frontend/src/app/bookings/bookings.component.scss
+++ b/frontend/src/app/bookings/bookings.component.scss
@@ -7,3 +7,19 @@
   bottom: 16px;
   right: 16px;
 }
+
+.income {
+  color: #4caf50;
+}
+
+.outcome {
+  color: #f44336;
+}
+
+.category {
+  color: grey;
+}
+
+.date {
+  color: grey;
+}
