--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -14,6 +14,8 @@
   </div>
 
   <div class="content" fxLayout="column">
-    <router-outlet></router-outlet>
+    <div>
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
