--- a/frontend/src/app/bookings/bookings.component.html
+++ b/frontend/src/app/bookings/bookings.component.html
@@ -1,16 +1,18 @@
 <div class="container" fxFlex="1 1 auto">
-  <mat-list role="list">
+  <mat-nav-list>
     <mat-list-item class="account" role="listitem" *ngFor="let booking of (bookings | async)">
       <div matLine fxLayout="row" fxLayoutAlign="space-between start">
         <div>{{booking.title}}</div>
-        <div>{{booking.date | date}}</div>
+        <div class="mat-small date">{{booking.date | date}}</div>
       </div>
       <div matLine fxLayout="row" fxLayoutAlign="space-between start">
-        <div *ngIf="categories">{{getCategory(booking.categoryId)}}</div>
-        <div>{{booking.amount}} €</div>
+        <div *ngIf="categories" class="mat-small category">{{getCategory(booking.categoryId)}}</div>
+        <div [className]="booking.amount >= 0 ? 'income' : 'outcome'"
+             class="mat-display-1">{{booking.amount | number: '1.2-2'}} €
+        </div>
       </div>
     </mat-list-item>
-  </mat-list>
+  </mat-nav-list>
 
   <button mat-fab color="primary" class="add-booking-button" (click)="showCreateDialog()">
     <mat-icon>add</mat-icon>
