--- a/frontend/src/app/categories/create-category-dialog/create-category-dialog.component.html
+++ b/frontend/src/app/categories/create-category-dialog/create-category-dialog.component.html
@@ -10,6 +10,6 @@
   </div>
   <div mat-dialog-actions align="end">
     <button mat-button (click)="onNoClick()">Abbrechen</button>
-    <button mat-button (click)="onOkClick()" cdkFocusInitial>Ok</button>
+    <button mat-button (click)="onOkClick()" cdkFocusInitial>OK</button>
   </div>
 </div>
