--- a/frontend/src/app/bookings/create-booking-dialog/create-booking-dialog.component.html
+++ b/frontend/src/app/bookings/create-booking-dialog/create-booking-dialog.component.html
@@ -2,7 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="!isLoading">
-  <h1 mat-dialog-title>Buchung anlegen</h1>
+  <h1 mat-dialog-title>Buchung anlegen/bearbeiten</h1>
   <div mat-dialog-content>
     <mat-form-field>
       <input matInput [(ngModel)]="title" placeholder="Titel">
@@ -43,6 +43,6 @@
   </div>
   <div mat-dialog-actions align="end">
     <button mat-button (click)="onNoClick()">Abbrechen</button>
-    <button mat-button (click)="createBooking()" cdkFocusInitial>Anlegen</button>
+    <button mat-button (click)="onOkClick()" cdkFocusInitial>OK</button>
   </div>
 </div>
