--- a/frontend/src/app/bookings/create-booking-dialog/create-booking-dialog.component.html
+++ b/frontend/src/app/bookings/create-booking-dialog/create-booking-dialog.component.html
@@ -16,7 +16,7 @@
       <!--      <input matInput [(ngModel)]="date" placeholder="Datum">-->
       <input matInput [(ngModel)]="date" [matDatepicker]="picker" placeholder="Datum">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
+      <mat-datepicker touchUi #picker></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field>
