--- a/frontend/src/app/accounts/accounts.component.html
+++ b/frontend/src/app/accounts/accounts.component.html
@@ -1,4 +1,4 @@
-<div class="container" fxFlex="1 1 auto">
+<div class="container">
   <mat-nav-list>
     <mat-list-item class="account" *ngFor="let account of (accounts | async)">
       <h2 matLine>{{account.name}}</h2>
