--- a/frontend/src/app/bookings/bookings.component.html
+++ b/frontend/src/app/bookings/bookings.component.html
@@ -1,4 +1,4 @@
-<div class="container" fxFlex="1 1 auto">
+<div class="container" fxLayout="column" fxLayoutAlign="space-around stretch">
   <div fxLayout="row" fxLayoutAlign="space-evenly center" style="margin-top: 8px">
     <button mat-icon-button aria-label="Previous month" (click)="selectPreviousMonth()">
       <mat-icon>keyboard_arrow_left</mat-icon>
@@ -38,6 +38,10 @@
       </div>
     </mat-list-item>
   </mat-nav-list>
+
+  <div class="balance">
+
+  </div>
 
   <button mat-fab color="primary" class="add-booking-button" (click)="showCreateDialog()">
     <mat-icon>add</mat-icon>
