--- a/frontend/src/app/categories/categories.component.html
+++ b/frontend/src/app/categories/categories.component.html
@@ -1,5 +1,4 @@
-<div class="container" fxFlex="1 1 auto">
-
+<div class="container">
   <mat-nav-list>
     <mat-list-item disableRipple="false" class="account mat-list-item" *ngFor="let category of (categories | async)"
                    (click)="updateCategory(category)">
