--- a/frontend/src/app/bookings/bookings.component.scss
+++ b/frontend/src/app/bookings/bookings.component.scss
@@ -1,3 +1,15 @@
+:host {
+  height: 100%;
+}
+
+.container {
+  height: 100%;
+}
+
+mat-nav-list {
+  overflow: auto;
+}
+
 .add-booking-button {
   position: absolute;
   bottom: 16px;
@@ -22,4 +34,5 @@
 
 .balance {
   background: #4caf50;
+  color: white;
 }
