--- a/frontend/src/app/bookings/bookings.component.html
+++ b/frontend/src/app/bookings/bookings.component.html
@@ -40,8 +40,9 @@
   </mat-nav-list>
 
   <div fxFlex="10" class="balance" fxLayout="column" fxLayoutAlign="center center">
-    <div>
-      Test €
+    <div *ngIf="balances" (click)="balancesClicked()">
+      {{balances[0].name}}
+      {{balances[0].balance | number: '1.2-2'}} €
     </div>
   </div>
 
