--- a/frontend/src/app/bookings/bookings.component.html
+++ b/frontend/src/app/bookings/bookings.component.html
@@ -24,10 +24,10 @@
       <mat-icon>keyboard_arrow_right</mat-icon>
     </button>
   </div>
+
   <mat-nav-list fxFlex="80">
-    <mat-list-item class="account" role="listitem" *ngFor="let booking of (bookings | async)"
-                   (click)="updateBooking(booking)">
-      <div matLine fxLayout="row" fxLayoutAlign="space-between start">
+    <mat-list-item class="account" role="listitem" *ngFor="let booking of (bookings | async)">
+      <div matLine fxLayout="row" fxLayoutAlign="space-between start" (click)="updateBooking(booking)">
         <div>{{booking.title}}</div>
         <div class="mat-small date">{{booking.date | date}}</div>
       </div>
@@ -36,6 +36,9 @@
         <div [className]="booking.amount >= 0 ? 'income' : 'outcome'">{{booking.amount | number: '1.2-2'}} €
         </div>
       </div>
+      <button mat-icon-button (click)="deleteBooking(booking.id)">
+        <mat-icon matListIcon>delete</mat-icon>
+      </button>
     </mat-list-item>
   </mat-nav-list>
 
