--- a/frontend/src/app/dialogs/create-booking-dialog/create-booking-dialog.component.html
+++ b/frontend/src/app/dialogs/create-booking-dialog/create-booking-dialog.component.html
@@ -52,8 +52,11 @@
       </mat-form-field>
     </div>
   </div>
-  <div mat-dialog-actions align="end">
-    <button mat-button (click)="onNoClick()">Abbrechen</button>
-    <button mat-button (click)="onOkClick()" cdkFocusInitial>OK</button>
+  <div>
+    <div mat-dialog-actions align="end">
+      <button mat-button (click)="onDeleteClick()" color="warn">Löschen</button>
+      <button mat-button (click)="onNoClick()">Abbrechen</button>
+      <button mat-button (click)="onOkClick()" cdkFocusInitial>OK</button>
+    </div>
   </div>
 </div>
