--- a/frontend/src/app/accounts/accounts.component.html
+++ b/frontend/src/app/accounts/accounts.component.html
@@ -1,12 +1,20 @@
 <div class="container">
-  <mat-nav-list>
-    <mat-list-item class="account" *ngFor="let account of (accounts | async)">
-      <h2 matLine>{{account.name}}</h2>
-      <p matLine class="mat-small starting-balance">Startsaldo: {{account.startingBalance | number: '1.2-2'}} €</p>
-    </mat-list-item>
-  </mat-nav-list>
+  <div *ngIf="isLoading" class="spinner" fxLayout="column" fxLayoutAlign="center center">
+    <mat-spinner></mat-spinner>
+  </div>
+  <div *ngIf="!isLoading">
+    <mat-nav-list>
+      <mat-list-item class="account" *ngFor="let account of accounts$ | async">
+        <h2 matLine>{{account.name}}</h2>
+        <p matLine class="mat-small starting-balance">Startsaldo: {{account.startingBalance | number: '1.2-2'}} €</p>
+        <p matLine class="mat-small starting-balance">
+          Kontostand: {{getBalanceForAccount(account.id) | number: '1.2-2'}} €
+        </p>
+      </mat-list-item>
+    </mat-nav-list>
 
-  <button mat-fab color="primary" class="add-account-button" (click)="showCreateDialog()">
-    <mat-icon>add</mat-icon>
-  </button>
+    <button mat-fab color="primary" class="add-account-button" (click)="showCreateDialog()">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
 </div>
