--- a/frontend/src/app/dialogs/create-category-dialog/create-category-dialog.component.html
+++ b/frontend/src/app/dialogs/create-category-dialog/create-category-dialog.component.html
@@ -5,7 +5,7 @@
   <h1 mat-dialog-title>Kategorie anlegen/bearbeiten</h1>
   <div mat-dialog-content>
     <mat-form-field>
-      <input matInput [(ngModel)]="categoryName" placeholder="Name">
+      <input matInput required [(ngModel)]="categoryName" placeholder="Name">
     </mat-form-field>
   </div>
   <div mat-dialog-actions align="end">
