--- a/frontend/src/app/dialogs/create-booking-dialog/create-booking-dialog.component.html
+++ b/frontend/src/app/dialogs/create-booking-dialog/create-booking-dialog.component.html
@@ -5,23 +5,23 @@
   <h1 mat-dialog-title>Buchung anlegen/bearbeiten</h1>
   <div mat-dialog-content>
     <mat-form-field>
-      <input matInput [(ngModel)]="title" placeholder="Titel">
+      <input matInput required [(ngModel)]="title" placeholder="Titel">
     </mat-form-field>
 
     <mat-form-field>
       <!--      <input matInput [(ngModel)]="date" placeholder="Datum">-->
-      <input matInput [(ngModel)]="date" [matDatepicker]="picker" placeholder="Datum">
+      <input matInput required [(ngModel)]="date" [matDatepicker]="picker" placeholder="Datum">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker touchUi #picker></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput type="number" [(ngModel)]="amount" placeholder="Wert">
+      <input matInput required type="number" [(ngModel)]="amount" placeholder="Wert">
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Kategorie</mat-label>
-      <mat-select [(value)]="categoryId">
+      <mat-select required [(value)]="categoryId">
         <mat-option *ngFor="let category of (categories |async)" [value]="category.id">
           {{category.name}}
         </mat-option>
@@ -30,7 +30,7 @@
 
     <mat-form-field>
       <mat-label>Konto</mat-label>
-      <mat-select [(value)]="accountId">
+      <mat-select required [(value)]="accountId">
         <mat-option *ngFor="let account of (accounts |async)" [value]="account.id">
           {{account.name}}
         </mat-option>
