--- a/frontend/src/app/bookings/bookings.component.html
+++ b/frontend/src/app/bookings/bookings.component.html
@@ -31,13 +31,16 @@
   <mat-nav-list *ngIf="!isLoading" fxFlex="80">
     <mat-list-item class="account" role="listitem" *ngFor="let booking of bookings"
                    (click)="updateBooking(booking)">
-      <div matLine fxLayout="row" fxLayoutAlign="space-between start">
+
+      <div matLine fxLayout="row" fxLayoutAlign="space-between start"
+           [class.booking-date-is-in-future]="dateIsInFuture(booking.date)">
         <div>{{booking.title}}</div>
         <div class="mat-small date">{{booking.date | date}}</div>
       </div>
       <div matLine fxLayout="row" fxLayoutAlign="space-between start">
         <div *ngIf="categories" class="mat-small category">{{getCategory(booking.categoryId)}}</div>
-        <div [className]="booking.amount >= 0 ? 'income' : 'outcome'">{{booking.amount | number: '1.2-2'}} €
+        <div [className]="booking.amount >= 0 ? 'income' : 'outcome'"
+             [class.booking-date-is-in-future]="dateIsInFuture(booking.date)">{{booking.amount | number: '1.2-2'}} €
         </div>
       </div>
     </mat-list-item>
