--- a/frontend/src/app/dialogs/create-account-dialog/create-account-dialog.component.html
+++ b/frontend/src/app/dialogs/create-account-dialog/create-account-dialog.component.html
@@ -3,17 +3,17 @@
 </div>
 <div *ngIf="!isLoading">
   <h1 mat-dialog-title>Konto anlegen</h1>
-  <div mat-dialog-content>
+  <div mat-dialog-content [formGroup]="accountFormGroup">
     <mat-form-field>
-      <input matInput required [(ngModel)]="accountName" placeholder="Name">
+      <input matInput required formControlName="name" placeholder="Name">
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput required type="number" [(ngModel)]="startingBalance" placeholder="Startsaldo">
+      <input matInput required type="number" formControlName="startingBalance" placeholder="Startsaldo">
     </mat-form-field>
   </div>
   <div mat-dialog-actions align="end">
     <button mat-button (click)="onNoClick()">Abbrechen</button>
-    <button mat-button (click)="createAccount()" cdkFocusInitial>Anlegen</button>
+    <button mat-button (click)="createAccount()" [disabled]="!this.accountFormGroup.valid" cdkFocusInitial>Anlegen</button>
   </div>
 </div>
