--- a/frontend/src/app/dialogs/create-booking-dialog/create-booking-dialog.component.html
+++ b/frontend/src/app/dialogs/create-booking-dialog/create-booking-dialog.component.html
@@ -3,26 +3,26 @@
 </div>
 <div *ngIf="!isLoading">
   <h1 mat-dialog-title>Buchung anlegen/bearbeiten</h1>
-  <div mat-dialog-content>
+  <div mat-dialog-content [formGroup]="bookingFormGroup">
     <mat-form-field>
-      <input matInput required [(ngModel)]="title" placeholder="Titel">
+      <input matInput required formControlName="title" placeholder="Titel">
     </mat-form-field>
 
     <mat-form-field>
       <!--      <input matInput [(ngModel)]="date" placeholder="Datum">-->
-      <input matInput required [(ngModel)]="date" [matDatepicker]="picker" placeholder="Datum">
+      <input matInput required formControlName="date" [matDatepicker]="picker" placeholder="Datum">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker touchUi #picker></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput required type="number" [(ngModel)]="amount" placeholder="Wert">
+      <input matInput required type="number" formControlName="amount" placeholder="Wert">
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Kategorie</mat-label>
-      <mat-select required [(value)]="categoryId">
-        <mat-option *ngFor="let category of (categories |async)" [value]="category.id">
+      <mat-select required formControlName="categoryId">
+        <mat-option *ngFor="let category of categories" [value]="category.id">
           {{category.name}}
         </mat-option>
       </mat-select>
@@ -30,19 +30,19 @@
 
     <mat-form-field>
       <mat-label>Konto</mat-label>
-      <mat-select required [(value)]="accountId">
-        <mat-option *ngFor="let account of (accounts |async)" [value]="account.id">
+      <mat-select required formControlName="accountId">
+        <mat-option *ngFor="let account of accounts" [value]="account.id">
           {{account.name}}
         </mat-option>
       </mat-select>
     </mat-form-field>
 
-    <mat-checkbox [(ngModel)]="isStandingOrder">Dauerauftrag</mat-checkbox>
+    <mat-checkbox formControlName="isStandingOrder">Dauerauftrag</mat-checkbox>
 
-    <div *ngIf="isStandingOrder">
+    <div *ngIf="bookingFormGroup.controls['isStandingOrder'].value">
       <mat-form-field>
         <mat-label>Periode</mat-label>
-        <mat-select [(value)]="standingOrderPeriod">
+        <mat-select formControlName="standingOrderPeriod">
           <mat-option value="WEEKLY">wöchentlich</mat-option>
           <mat-option value="MONTHLY">monatlich</mat-option>
           <mat-option value="QUARTERLY">quartalsweise</mat-option>
@@ -54,9 +54,9 @@
   </div>
   <div>
     <div mat-dialog-actions align="end">
-      <button mat-button *ngIf="data && data.booking" (click)="onDeleteClick()" color="warn">Löschen</button>
+      <button mat-button *ngIf="data.booking.id > 0" (click)="onDeleteClick()" color="warn">Löschen</button>
       <button mat-button (click)="onNoClick()">Abbrechen</button>
-      <button mat-button (click)="onOkClick()" cdkFocusInitial>OK</button>
+      <button mat-button (click)="onOkClick()" [disabled]="!bookingFormGroup.valid" cdkFocusInitial>OK</button>
     </div>
   </div>
 </div>
