--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -6,6 +6,7 @@
         <a mat-button routerLink="/bookings">Buchungen</a>
         <a mat-button routerLink="/accounts">Konten</a>
         <a mat-button routerLink="/categories">Kategorien</a>
+        <a mat-button routerLink="/documents">Dokumente</a>
       </mat-toolbar-row>
     </mat-toolbar>
   </div>
