--- a/frontend/src/app/documents/documents.component.html
+++ b/frontend/src/app/documents/documents.component.html
@@ -1,10 +1,9 @@
 <div class="container">
-  <p>Hello</p>
+  <label for="singleFile">Upload file</label>
+  <input id="singleFile" type="file" (change)="onFilesAdded($event)"/>
 
-  <form>
-    <input type="file" (change)="onFilesAdded($event)"/>
-    <button type="submit">Upload</button>
-  </form>
-
-  <canvas id="the-canvas" style="visibility: hidden;"></canvas>
+  <canvas id="pdf-to-image-canvas" style="display: none;"></canvas>
+  <div>
+    {{text}}
+  </div>
 </div>
