--- a/frontend/src/app/dialogs/create-account-dialog/create-account-dialog.component.html
+++ b/frontend/src/app/dialogs/create-account-dialog/create-account-dialog.component.html
@@ -11,9 +11,12 @@
     <mat-form-field>
       <input matInput required type="number" formControlName="startingBalance" placeholder="Startsaldo">
     </mat-form-field>
+
+    <mat-checkbox formControlName="isMain">Hauptkonto</mat-checkbox>
   </div>
   <div mat-dialog-actions align="end">
     <button mat-button (click)="onNoClick()">Abbrechen</button>
-    <button mat-button (click)="createAccount()" [disabled]="!this.accountFormGroup.valid" cdkFocusInitial>Anlegen</button>
+    <button mat-button (click)="createAccount()" [disabled]="!this.accountFormGroup.valid" cdkFocusInitial>Anlegen
+    </button>
   </div>
 </div>
