Display only main accounts balance

--- a/frontend/src/app/bookings/bookings.component.html
+++ b/frontend/src/app/bookings/bookings.component.html
@@ -48,8 +48,8 @@
 
   <div fxFlex="10" class="balance" fxLayout="column" fxLayoutAlign="center center">
     <div *ngIf="balances.length > 0" (click)="balancesClicked()">
-      {{balances[0].name}}
-      {{balances[0].balance | number: '1.2-2'}} €
+      {{getMainAccountName()}}
+      {{getMainAccountBalance() | number: '1.2-2'}} €
     </div>
   </div>
 
