--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,16 +1,27 @@
-<div fxLayout="column" fxFill>
-  <div fxLayout="row">
-    <mat-toolbar color="primary">
-      <mat-toolbar-row>
-        <a mat-button routerLink="/">Übersicht</a>
-        <a mat-button routerLink="/bookings">Buchungen</a>
-        <a mat-button routerLink="/accounts">Konten</a>
-        <a mat-button routerLink="/categories">Kategorien</a>
-      </mat-toolbar-row>
-    </mat-toolbar>
-  </div>
+<mat-drawer-container>
+  <mat-drawer #drawer mode="over">
+    <mat-nav-list>
+      <a mat-list-item routerLink="/">Übersicht</a>
+      <a mat-list-item routerLink="/bookings">Buchungen</a>
+      <a mat-list-item routerLink="/accounts">Konten</a>
+      <a mat-list-item routerLink="/categories">Kategorien</a>
+    </mat-nav-list>
+  </mat-drawer>
+  <mat-drawer-content>
+    <div fxLayout="column" fxFill>
+      <div fxLayout="row">
+        <mat-toolbar color="primary">
+          <mat-toolbar-row>
+            <button mat-icon-button>
+              <mat-icon (click)="drawer.toggle()">menu</mat-icon>
+            </button>
+          </mat-toolbar-row>
+        </mat-toolbar>
+      </div>
 
-  <div class="content" fxLayout="column">
-    <router-outlet></router-outlet>
-  </div>
-</div>
+      <div class="content" fxLayout="column">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </mat-drawer-content>
+</mat-drawer-container>
