Add section in drawer

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,10 +1,13 @@
 <mat-drawer-container>
   <mat-drawer #drawer mode="over">
     <mat-nav-list>
+      <h3 matSubheader>My Budget Book</h3>
       <a mat-list-item routerLink="/">Übersicht</a>
       <a mat-list-item routerLink="/bookings">Buchungen</a>
       <a mat-list-item routerLink="/accounts">Konten</a>
       <a mat-list-item routerLink="/categories">Kategorien</a>
+      <mat-divider></mat-divider>
+
     </mat-nav-list>
   </mat-drawer>
   <mat-drawer-content>
