Mark selected item

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,10 +2,13 @@
   <mat-drawer #drawer mode="over">
     <mat-nav-list>
       <h3 matSubheader>My Budget Book</h3>
-      <a mat-list-item routerLink="/">Übersicht</a>
-      <a mat-list-item routerLink="/bookings">Buchungen</a>
-      <a mat-list-item routerLink="/accounts">Konten</a>
-      <a mat-list-item routerLink="/categories">Kategorien</a>
+      <a mat-list-item routerLinkActive="list-item-active" [routerLinkActiveOptions]="{exact: true}" routerLink="/">Übersicht</a>
+      <a mat-list-item routerLinkActive="list-item-active" [routerLinkActiveOptions]="{exact: true}"
+         routerLink="/bookings">Buchungen</a>
+      <a mat-list-item routerLinkActive="list-item-active" [routerLinkActiveOptions]="{exact: true}"
+         routerLink="/accounts">Konten</a>
+      <a mat-list-item routerLinkActive="list-item-active" [routerLinkActiveOptions]="{exact: true}"
+         routerLink="/categories">Kategorien</a>
       <mat-divider></mat-divider>
 
     </mat-nav-list>
