--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -4,6 +4,13 @@
   height: 100%;
 }
 
+@media (min-width: 672px) {
+  .content {
+    width: 672px;
+    margin: auto;
+  }
+}
+
 mat-drawer-container {
   height: 100%;
 }
